# AutoML-Platform

./: .dockerignore  .gitignore  README.md  launcher.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run_platform.sh  run_tests.sh
.github/workflows/: github-actions.yml
api/: main.py
api/dto/: datasetRequest.py
api/routes/: health.py
src/api/: __init__.py  main.py
src/api/dto/: datasetRequest.py  deploymentRequest.py
src/api/routes/: core.py  health.py
src/automl_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dashboard/: app.py  package-lock.json  pipeline-visualizer.tsx  requirements.txt  status_card.tsx  tailwind.config.js  tsconfig.json
src/dashboard/app/: globals.css  layout.tsx  page.tsx
src/dashboard/components/: Pipeline.tsx  app-layout.tsx  dashboard.tsx  deployment.tsx  header.tsx  metrics.tsx  model_leaderboard.tsx  model_registry.tsx  pipeline-visualizer.tsx  providers.tsx  sidebar.tsx  status_card.tsx  training_evolution.tsx
src/dashboard/hooks/: use-dashboard-data.ts
src/dashboard/lib/: api.ts
src/deployment/: app.py  deploy_model.py  model_selector.py
src/deployment/docker/: Dockerfile.inference  requirements.txt
src/dockers/: Dockerfile  requirements.txt
src/exceptions/: __init__.py  internalServerError.py  notFoundError.py
src/kubernetes/: k3s_builder.py
src/orchestrator/: job-manager.py  job_scheduler.py
src/training/: training.py
tests/: conftest.py  test_api_routes.py  test_job_scheduler.py  test_k3s_builder.py  test_redis_workflow.py  test_training.py
utils/: logging.py
(+5 files in other folders)
