[project]
name = "automl-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fakeredis>=2.10.0",
    "fastapi>=0.121.2",
    "httpx>=0.24.0",
    "kubernetes>=34.1.0",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.52.1",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]

[tool.uv]
package = true
